--- a/css/app.css
+++ b/css/app.css
@@ -19,3 +19,56 @@ body {
 img {
     max-width: 100%;
 }
+[class$="__contenedor"] {
+    max-width: 120rem;
+    margin: 0 auto;
+    width: 95%;
+}
+
+
+.header {
+    background-image: linear-gradient(to right, rgb(0 0 0 / .70), rgb(0 0 0 / .70)), url(../img/header.jpg);
+    background-size: cover;
+    background-position: 50%;
+    padding: 5rem 0;
+}
+.header__guitarra {
+    display: none;
+}
+.header__barra {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+@media (min-width: 768px) {
+    .header__barra {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+.navegacion {
+    display: flex;
+    gap: 2rem;
+    margin-top: 5rem;
+}
+@media (min-width: 768px) {
+    .navegacion {
+        margin-top: 0;
+    }
+}
+.navegacion__enlace {
+    color: var(--blanco);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    padding: .5rem;
+    font-weight: 700;
+    transition-property: background-color;
+    transition-duration: 300ms;
+}
+.navegacion__enlace:hover {
+    background-color: var(--primary);
+}
+.header__logo {
+    width: 30rem;
+}
