--- a/css/app.css
+++ b/css/app.css
@@ -31,9 +31,18 @@ img {
     background-size: cover;
     background-position: 50%;
     padding: 5rem 0;
+    position: relative;
 }
 .header__guitarra {
     display: none;
+}
+@media (min-width: 992px) {
+    .header__guitarra {
+        display: block;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+    }
 }
 .header__barra {
     display: flex;
@@ -53,6 +62,8 @@ img {
     display: flex;
     gap: 2rem;
     margin-top: 5rem;
+    position: relative;
+    z-index: 1; /*Para poner la navegacion encima de la imagen junto con el position relative*/
 }
 @media (min-width: 768px) {
     .navegacion {
