--- a/css/app.css
+++ b/css/app.css
@@ -42,6 +42,27 @@ img {
         position: absolute;
         right: 0;
         bottom: 0;
+        /* animation-name: mostrarImagen;
+        animation-duration: 1s;
+        animation-delay: 0s;
+        animation-timing-function: ease-in-out; */
+        /* animation-iteration-count: 4; */
+        animation:1s ease-in-out 0s 1 mostrarImagen; 
+    }
+}
+@keyframes mostrarImagen {
+    0% {
+        opacity: 0;
+        transform: translateX(-10rem);
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0rems);
     }
 }
 .header__barra {
