--- a/css/app.css
+++ b/css/app.css
@@ -24,6 +24,13 @@ img {
     margin: 0 auto;
     width: 95%;
 }
+[class $="__heading"] {
+    font-size: 4rem;
+    text-align: center;
+    font-weight: 900;
+    color: var(--primary);
+    margin: 5rem 0;
+}
 
 
 .header {
@@ -140,4 +147,27 @@ img {
 .modelo__enlace:hover {
     background-color: var(--primary);
     
+}
+
+/* PRODUCTOS */
+.productos__grid {
+    display: grid;
+    gap: 4rem;
+}
+@media (min-width: 768px) {
+    .productos__grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media (min-width: 1200px) {
+    .productos__grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+.producto {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    column-gap: 1rem;
+    align-items: centers;
 }
