--- a/css/app.css
+++ b/css/app.css
@@ -347,3 +347,17 @@ img {
     font-weight: 700;   
     text-align: center;
 }
+
+
+/* PAGINA NOSOTROS */
+.nosotros__grid {
+    display: grid;
+    gap: 4rem;
+}
+@media (min-width: 768px) {
+    .nosotros__grid {
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        
+    }
+}
