--- a/css/app.css
+++ b/css/app.css
@@ -269,6 +269,12 @@ img {
         grid-template-columns: repeat(3, 1fr);
     }
 }
+
+/* ENTRADA */
+.entrada {
+    max-width: 80rem;
+    margin: 0 auto;
+}
 .entrada__contenido {
     padding: 2rem;
 }
