--- a/css/app.css
+++ b/css/app.css
@@ -169,7 +169,7 @@ img {
     display: grid;
     grid-template-columns: 2fr 3fr;
     column-gap: 1rem;
-    align-items: centers;
+    align-items: center;
 }
 .producto__nombre {
     font-size: 3rem;
@@ -201,6 +201,43 @@ img {
 .producto__enlace:hover{
     background-color: var(--primary);
     color: var(--blanco);
+}
+
+.producto__formulario {
+    display: flex;
+    flex-direction: column;
+}
+.producto__label {
+    font-size: 2.2rem;
+    margin-right: 1rem;
+}
+.producto__cantidad {
+    border: 2px solid var(--primary);
+    padding: 1rem;
+    text-align: center;
+}
+.porducto__cantidad:focus-visible {
+    outline: 2px solid var(--primary);
+    border: none;
+}
+.producto__agregar-carrito {
+    margin-top: 3rem;
+    display: block;
+    background-color: var(--primary);
+    text-decoration: none;
+    text-transform: uppercase;
+    border: none;
+    text-align: center;
+    padding: 2rem 5rem;
+    color: var(--blanco);
+    font-size: 1.8rem;
+    font-weight: 700;
+    transition-property: background-color;
+    transition-duration: 300ms;
+}
+.producto__agregar-carrito:hover{
+    background-color: var(--negro);
+    cursor: pointer;
 }
 
 /* CURSOS */
